Changes to reduce number of warnings. Ranges from commenting unused code out to substitutions for deprecated code.